@@ -2,6 +2,8 @@
 
 === Edge
 
+* Avoid bootstrap errors related to Radiant::Config by checking for
+table existence. [Sean Cribbs]
 * Correct status code typo in Admin::ResourceController. [Sean Cribbs]
 
 === 0.7.1 Engraving
